@@ -3,6 +3,8 @@ package org.openjump.core.ui;
 import com.vividsolutions.jump.I18N;
 import com.vividsolutions.jump.util.Blackboard;
 import com.vividsolutions.jump.workbench.WorkbenchContext;
+import com.vividsolutions.jump.workbench.datasource.DataSourceQueryChooserDialog;
+import com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn;
 import com.vividsolutions.jump.workbench.registry.Registry;
 import com.vividsolutions.jump.workbench.ui.OptionsPanel;
 import com.vividsolutions.jump.workbench.ui.plugin.PersistentBlackboardPlugIn;
@@ -86,8 +88,14 @@ public class DatasetOptionsPanel extends JPanel implements OptionsPanel {
 				if (fileLoader.getDescription().equals("ESRI Shapefile")) {
 					fileLoader.removeOption("charset", "CharSetComboBoxField", Charset.defaultCharset().displayName(), true);
 					if (charsetSelectionCheckBox.isSelected()) {
-						fileLoader.addOption("charset", "CharSetComboBoxField", Charset.defaultCharset().displayName(), true);
-					}
+                        fileLoader.addOption("charset", "CharSetComboBoxField", Charset.defaultCharset().displayName(), true);
+                    }
+                    // update the DataSourceQueryChooserDialog for the current format
+                    String KEY = SaveDatasetAsPlugIn.class.getName() + " - DIALOG";
+                    if (null != context.getWorkbench().getBlackboard().get(KEY)) {
+                        DataSourceQueryChooserDialog dialog = (DataSourceQueryChooserDialog) context.getWorkbench().getBlackboard().get(KEY);
+                        dialog.showFormat();
+                    }
 				}
 			}
 		}
