@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2015-07-12 mmichaud <m.michael.michaud@orange.fr>
+  * improve .cpg handling for shapefile/dbf format
+  * fix a bug with charset option (could be checked but not visible in "save dataset as" panel)
+
 2015-07-03 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
   * Added "Change Style" plugin to WMS Layers - currently only general transaprency and scale visibility 
     are available
